--- a/ws/package.json
+++ b/ws/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.731.0",
     "aws-sdk": "^2.1692.0",
     "busboy": "^1.6.0",
     "busboy-body-parser": "^0.3.2",
